3/3.2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
spec:
  type: NodePort
  selector:
    app: pingpong-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
