3/3.2/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpong-app-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: pingpong-app-svc
          servicePort: 80
